[package]
name = "abc348"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc348-a = { alias = "a", problem = "https://atcoder.jp/contests/abc348/tasks/abc348_a" }
abc348-b = { alias = "b", problem = "https://atcoder.jp/contests/abc348/tasks/abc348_b" }
abc348-c = { alias = "c", problem = "https://atcoder.jp/contests/abc348/tasks/abc348_c" }
abc348-d = { alias = "d", problem = "https://atcoder.jp/contests/abc348/tasks/abc348_d" }
abc348-e = { alias = "e", problem = "https://atcoder.jp/contests/abc348/tasks/abc348_e" }
abc348-f = { alias = "f", problem = "https://atcoder.jp/contests/abc348/tasks/abc348_f" }
abc348-g = { alias = "g", problem = "https://atcoder.jp/contests/abc348/tasks/abc348_g" }

[[bin]]
name = "abc348-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc348-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc348-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc348-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc348-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc348-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc348-g"
path = "src/bin/g.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
